--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "autoprefixer": "9",
+    "font-awesome": "^4.7.0",
     "notistack": "^2.0.3",
     "postcss": "7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
