--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "autoprefixer": "9",
+    "axios": "^0.24.0",
     "font-awesome": "^4.7.0",
     "notistack": "^2.0.3",
     "postcss": "7",
