--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "postcss": "7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-file-base64": "^1.0.3",
+    "react-loader-spinner": "^4.0.0",
     "react-modal": "^3.14.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-toast-notifications": "^2.5.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "web-vitals": "^2.1.0"
   },
