--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "contact-manager",
+  "engines":{
+    "node":"16.13.1"
+  },
   "version": "0.1.0",
   "private": true,
   "dependencies": {
