process package added

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "contact-manager",
-  "engines":{
-    "node":"16.13.1"
+  "engines": {
+    "node": "16.13.1"
   },
   "version": "0.1.0",
   "private": true,
@@ -17,6 +17,7 @@
     "font-awesome": "^4.7.0",
     "notistack": "^2.0.3",
     "postcss": "7",
+    "process": "^0.11.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
