--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@testing-library/user-event": "^13.2.1",
     "autoprefixer": "9",
     "axios": "^0.24.0",
+    "express": "^4.17.2",
+    "express-favicon": "^2.0.1",
     "font-awesome": "^4.7.0",
     "notistack": "^2.0.3",
+    "path": "^0.12.7",
     "postcss": "7",
     "process": "^0.11.10",
     "react": "^17.0.2",
@@ -30,7 +33,7 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "node server.js",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
