--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "craco start",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
